# cbase

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build.zig  cbase.go  construct_Win32_VS2012.bat  install_Win32_VS2012.bat  install_Win64_VS2013.bat  pom.props  pom.xml  tundra.lua  xbase.go  xbase.sln  xbase.vcxproj  xunittest.vcxproj
docs/manuals/: dependencies.txt  style guide.txt
package/: package.go
source/: CMakeLists.txt
source/main/: meson.build
source/main/cpp/: c_allocator.cpp  c_allocator_system.cpp  c_allocator_system_mac.cpp  c_allocator_system_win32.cpp  c_base.cpp  c_binary_search.cpp  c_binmap.cpp  c_btree.cpp  c_buffer.cpp  c_console.cpp  c_console_mac.cpp  c_console_win32.cpp  c_context.cpp  c_darray.cpp  c_dconv.cpp  c_debug.cpp  c_duomap.cpp  c_guid.cpp  c_hash.cpp  c_hash2.cpp  c_hbb.cpp  c_int128.cpp  c_int256.cpp  c_int64.cpp  c_log.cpp  c_log_to_console.cpp  c_malloc_free.cpp  c_map.cpp  c_memory.cpp  c_pdqsort.cpp  c_printf.cpp  c_qsort.cpp  c_random.cpp  c_runes.cpp  c_slice.cpp  c_sscanf.cpp  c_str.cpp  c_strfmt.cpp  c_tblfmt.cpp  c_thread_context.cpp  (+71 more)
source/main/include/cbase/: c_allocator.h  c_allocator_pool.h  c_base.h  c_binary_search.h  c_binmap.h  c_bit_field.h  c_btree.h  c_buffer.h  c_carray.h  c_console.h  c_context.h  c_darray.h  c_dconv.h  c_debug.h  c_double.h  c_duomap.h  c_endian.h  c_float.h  c_guid.h  c_hash.h  c_hbb.h  c_integer.h  c_limits.h  c_log.h  c_map.h  c_map32.h  c_memory.h  c_printf.h  c_qsort.h  c_random.h  c_range.h  c_runes.h  c_segmented.h  c_singleton.h  c_slice.h  c_span.h  c_str.h  c_stream.h  c_strfmt.h  c_target.h  (+9 more)
source/main/include/cbase/private/: c_base.h  c_double_inline.h  c_double_inline_mac.h  c_double_inline_win32.h  c_float_inline.h  c_float_inline_mac.h  c_float_inline_win32.h  c_guid_inline.h  c_int128.h  c_int256.h  c_int64.h  c_integer_inline.h  c_integer_inline_generic.h  c_integer_inline_mac.h  c_integer_inline_win32.h  c_log_to_console.h  c_map_internal.h  c_map_internal2.h  c_std.h  c_tree32_internal.h  c_tree_internal.h  c_uint128.h  c_uint256.h  c_uint64.h
source/main/include/xbase/: c_allocator.h  c_base.h  c_bit_field.h  c_buffer.h  c_context.h  c_darray.h  c_double.h  c_endian.h  c_handle.h  c_hash.h  c_integer.h  c_log.h  c_map.h  c_noncopyable.h  c_printf.h  c_singleton.h  c_stream.h  c_target.h  c_tree.h  c_va_list.h  x_allocator.h  x_array_t.h  x_base.h  x_binary_search.h  x_bit_field.h  x_btree.h  x_buffer.h  x_carray.h  x_chars.h  x_console.h  x_context.h  x_darray.h  x_debug.h  x_double.h  x_endian.h  x_float.h  x_guid.h  x_handle.h  x_hash.h  x_hbb.h  (+32 more)
source/main/include/xbase/private/: c_base.h  c_double_inline.h  c_double_inline_mac.h  c_float_inline_win32.h  c_guid_inline.h  c_int64.h  c_integer_inline.h  c_integer_inline_win32.h  c_log_to_console.h  c_std.h  c_uint128.h  c_uint64.h  x_base.h  x_buffer.h  x_console_win32.h  x_double_inline.h  x_double_inline_3ds.h  x_double_inline_mac.h  x_double_inline_ps3.h  x_double_inline_psp.h  x_double_inline_wii.h  x_double_inline_win32.h  x_float_inline.h  x_float_inline_3ds.h  x_float_inline_mac.h  x_float_inline_ps3.h  x_float_inline_psp.h  x_float_inline_wii.h  x_float_inline_win32.h  x_float_inline_x360.h  x_guid_inline.h  x_int128.h  x_int256.h  x_int64.h  x_integer_inline.h  x_integer_inline_3ds.h  x_integer_inline_generic.h  x_integer_inline_mac.h  x_integer_inline_osx.h  x_integer_inline_ps3.h  (+20 more)
source/test/: meson.build
source/test/cpp/: test_allocator.cpp  test_binary_search.cpp  test_binmap.cpp  test_bitfield.cpp  test_btree.cpp  test_buffer.cpp  test_carray.cpp  test_chars.cpp  test_context.cpp  test_darray.cpp  test_dconv.cpp  test_double.cpp  test_duomap.cpp  test_dyntrie.cpp  test_endian.cpp  test_float.cpp  test_guid.cpp  test_hash.cpp  test_hbb.cpp  test_int64.cpp  test_integer.cpp  test_main.cpp  test_map32_set32.cpp  test_map_set.cpp  test_memory.cpp  test_qsort.cpp  test_random.cpp  test_range.cpp  test_range16.cpp  test_runes_ascii.cpp  test_runes_utf.cpp  test_singleton.cpp  test_slice.cpp  test_span.cpp  test_sprintf.cpp  test_sscanf.cpp  test_strfmt.cpp  test_tblfmt.cpp  test_thread_context.cpp  test_tree.cpp  (+53 more)
source/test/include/cbase/: test_allocator.h
